[package]
name = "wai-bindgen-gen-wasmtime"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[lib]
test = false
doctest = false

[dependencies]
wai-bindgen-gen-core = { path = '../gen-core', version = '0.1.0' }
wai-bindgen-gen-rust = { path = '../gen-rust', version = '0.1.0' }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
anyhow = "1.0"
test-helpers = { path = '../test-helpers', features = ['wai-bindgen-gen-wasmtime'] }
wasmtime = "0.31.0"
wasmtime-wasi = "0.31.0"
wai-bindgen-wasmtime = { path = '../wasmtime', features = ['tracing', 'async'] }

[features]
witx-compat = ['wai-bindgen-gen-core/witx-compat']
