[package]
name = "wit-bindgen-go"
authors = ["Mossaka <duibao55328@gmail.com>"]
version = "0.8.0"
edition.workspace = true
repository = 'https://github.com/bytecodealliance/wit-bindgen'
license = "Apache-2.0 WITH LLVM-exception"
homepage = 'https://github.com/bytecodealliance/wit-bindgen'
description = """
TinyGo/Go bindings generator for WIT and the component model, typically used
through the `wit-bindgen-cli` crate.
"""

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
clap = { workspace = true, optional = true }
wit-bindgen-c = { workspace = true }

[dev-dependencies]
test-helpers = { path = '../test-helpers' }
